--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -1,19 +1,8 @@
-#
-
-# if d.d.d, build full semver (multi-tag image)
-# otherwise, build special name (single tag image)
-
-# need-alltags - true for building
-#   true
-#     - push tag with tag is major.minor.patch
-#     - schedule with tag is major.minor.patch
-#   false
-#     - push tag with tag is not major.minor.patch
-#     - schedule with tag is not major.minor.patch
-#     - it is a dispatch event
-#
-# schedule - if latest tag is not major.minor.patch, gives warning or skips
-
+# xxx - need to generate error if "schedule" & "is-semver" is false
+# xxx - need to validate the tag for docker image tag
+#       "valid ASCII and can contain lowercase and uppercase letters,
+#        digits, underscores, periods, and hyphens. It cannot start
+#        with a period or hyphen and must be no longer than 128 characters"
 name: Push Trigger to Build Image
 on:
   push:
@@ -31,6 +20,8 @@ on:
         required: true
         type: boolean
         default: false
+  schedule:
+    - cron: "45 22 * * *"
 
 jobs:
   # get the sha and tag from github context (push tag action)
@@ -59,6 +50,11 @@ jobs:
     with:
       ref: ${{inputs.ref}}
 
+  get-schedule-params:
+    uses: frederickcwong/.github/.github/workflows/get-latest-tag.yml@main
+    with:
+      ref: "main"
+
   # IMPORTANT NOTE
   #
   # there is an issue with the "needs" logic
@@ -76,7 +72,7 @@ jobs:
   # actual values).
   get-params:
     runs-on: ubuntu-latest
-    needs: [get-push-params, get-dispatch-params]
+    needs: [get-push-params, get-dispatch-params, get-schedule-params]
     outputs:
       sha: ${{steps.get-params.outputs.sha}}
       tag: ${{steps.get-params.outputs.tag}}
@@ -135,7 +131,10 @@ jobs:
           #   - "major.minor.patch-YYYY-MM-DD" (semver)
           #   - "latest" (semver)
           else
-            echo "blah"
+            tag="${{needs.get-schedule-params.outputs.tag}}"
+            sha="${{needs.get-schedule-params.outputs.sha}}"
+            is_semver=$(isSemver $tag)
+            latest=$([[ $is_semver == 'true' ]] && echo 'true' || echo 'false')
           fi
           echo "tag ${tag}"
           echo "sha ${sha}"
