--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -24,6 +24,18 @@ on:
     - cron: "0 23 * * *"
 
 jobs:
+  check-base-image:
+    runs-on: ubuntu-latest
+    outputs:
+      need-update: ${{steps.check.outputs.needs-updating}}
+    steps:
+      - id: check
+        uses: lucacome/docker-image-update-checker@v1
+        with:
+          base-image: library/alpine:latest
+          image: frederickwong/sandbox:latest
+          platforms: linux/amd64,linux/arm64
+
   # get the sha and tag from github context (push tag action)
   get-push-params:
     runs-on: ubuntu-latest
@@ -72,12 +84,19 @@ jobs:
   # actual values).
   get-params:
     runs-on: ubuntu-latest
-    needs: [get-push-params, get-dispatch-params, get-schedule-params]
+    needs:
+      [
+        get-push-params,
+        get-dispatch-params,
+        get-schedule-params,
+        check-base-image,
+      ]
     outputs:
       sha: ${{steps.get-params.outputs.sha}}
       tag: ${{steps.get-params.outputs.tag}}
       is-semver: ${{steps.get-params.outputs.is-semver}}
       latest: ${{steps.get-params.outputs.latest}}
+      need-building: ${{steps.get-params.outputs.need-building}}
     steps:
       - id: get-params
         shell: bash
@@ -104,6 +123,7 @@ jobs:
             sha="${{needs.get-push-params.outputs.sha}}"
             is_semver=$(isSemver $tag)
             latest=${is_semver}
+            need-building='true'
 
           # workflow dispatch
           #
@@ -120,6 +140,7 @@ jobs:
             sha="${{needs.get-dispatch-params.outputs.sha}}"
             is_semver=$(isSemver $tag)
             latest=$([[ ${{inputs.latest}} == 'true' && ($is_semver == 'true') ]] && echo 'true' || echo 'false')
+            need-building='true'
 
           # schedule
           #
@@ -135,6 +156,7 @@ jobs:
             sha="${{needs.get-schedule-params.outputs.sha}}"
             is_semver=$(isSemver $tag)
             latest=$([[ $is_semver == 'true' ]] && echo 'true' || echo 'false')
+            need-building=$([[ ${{needs.check-base-image.outputs.need-update}} == 'true' && $is_semver == 'true' ]] && echo 'true' || echo 'false')
           fi
           echo "tag ${tag}"
           echo "sha ${sha}"
@@ -148,6 +170,7 @@ jobs:
   # build the image with tags based on tag is in semver format or not
   build:
     needs: [get-params]
+    if: ${{needs.get-params.outputs.need-building == 'true'}}
     uses: ./.github/workflows/build.yml
     secrets:
       username: ${{ secrets.DOCKER_USERNAME }}
