--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -125,7 +125,7 @@ jobs:
             sha="${{needs.get-push-params.outputs.sha}}"
             is_semver=$(isSemver $tag)
             latest=${is_semver}
-            need-building='true'
+            need_building='true'
 
           # workflow dispatch
           #
@@ -142,7 +142,7 @@ jobs:
             sha="${{needs.get-dispatch-params.outputs.sha}}"
             is_semver=$(isSemver $tag)
             latest=$([[ ${{inputs.latest}} == 'true' && ($is_semver == 'true') ]] && echo 'true' || echo 'false')
-            need-building="true"
+            need_building="true"
 
           # schedule
           #
@@ -158,16 +158,18 @@ jobs:
             sha="${{needs.get-schedule-params.outputs.sha}}"
             is_semver=$(isSemver $tag)
             latest=$([[ $is_semver == 'true' ]] && echo 'true' || echo 'false')
-            need-building=$([[ ${{needs.check-base-image.outputs.need-update}} == 'true' && $is_semver == 'true' ]] && echo 'true' || echo 'false')
+            need_building=$([[ ${{needs.check-base-image.outputs.need-update}} == 'true' && $is_semver == 'true' ]] && echo 'true' || echo 'false')
           fi
           echo "tag ${tag}"
           echo "sha ${sha}"
           echo "is-semver ${is_semver}"
           echo "latest ${latest}"
+          echo "need-building ${need_building}"
           echo "sha=${sha}" >> "$GITHUB_OUTPUT"
           echo "tag=${tag}" >> "$GITHUB_OUTPUT"
           echo "is-semver=${is_semver}" >> "$GITHUB_OUTPUT"
           echo "latest=${latest}" >> "$GITHUB_OUTPUT"
+          echo "need-building=${need_building}" >> "$GITHUB_OUTPUT"
 
   # build the image with tags based on tag is in semver format or not
   build:
