--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -27,11 +27,9 @@ jobs:
   check-base-image:
     runs-on: ubuntu-latest
     outputs:
-      # need-update: ${{steps.check.outputs.needs-updating}}
-      need-update: true
+      need-update: ${{steps.check.outputs.needs-updating}}
     steps:
       - id: check
-        if: false
         uses: lucacome/docker-image-update-checker@v1
         with:
           base-image: library/alpine:latest
