--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -21,7 +21,7 @@ on:
         type: boolean
         default: false
   schedule:
-    - cron: "0 1 * * *"
+    - cron: "*/15 * * * *"
 
 jobs:
   check-base-image:
