--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -174,6 +174,9 @@ jobs:
             m_title="${m_title} - WARNING!"
           fi
 
+          echo "title=${m_title}"
+          echo "body=${m_body}"
+
           echo "sha=${sha}" >> "$GITHUB_OUTPUT"
           echo "tag=${tag}" >> "$GITHUB_OUTPUT"
           echo "is-semver=${is_semver}" >> "$GITHUB_OUTPUT"
