--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -174,6 +174,8 @@ jobs:
           EOF
           )
 
+          # github action does not accept multiline string as
+          # output. replaces %, \n, \r characters
           m_body="${m_body//'%'/'%25'}"
           m_body="${m_body//$'\n'/'%0A'}"
           m_body="${m_body//$'\r'/'%0D'}"
