--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -159,7 +159,7 @@ jobs:
             need_building=$([[ ${{needs.check-base-image.outputs.need-update}} == 'true' && $is_semver == 'true' ]] && echo 'true' || echo 'false')
           fi
 
-          m_title="Build: ${{github.event.repository.name}}@${tag}"
+          m_title="Build: ${{github.event.repository}}@${tag}"
           if [[${{github.event_name}} == 'schedule' && $is_semver == 'false']]; then
             m_title="${m_title} - WARNING!"
           fi
@@ -174,19 +174,6 @@ jobs:
           EOF
           )
 
-          # github action does not accept multiline string as
-          # output. replaces %, \n, \r characters
-          # https://trstringer.com/github-actions-multiline-strings/
-
-          # m_body="${m_body//'%'/'%25'}"
-          # m_body="${m_body//$'\n'/'%0A'}"
-          # m_body="${m_body//$'\r'/'%0D'}"
-
-          echo "${m_body}"
-
-          echo "title=${m_title}"
-          echo "body=${m_body}"
-
           echo "sha=${sha}" >> "$GITHUB_OUTPUT"
           echo "tag=${tag}" >> "$GITHUB_OUTPUT"
           echo "is-semver=${is_semver}" >> "$GITHUB_OUTPUT"
@@ -194,6 +181,7 @@ jobs:
           echo "need-building=${need_building}" >> "$GITHUB_OUTPUT"
           echo "shoutrrr-title=$m_title" >> "$GITHUB_OUTPUT"
 
+          # output does not accept multi-line string, use env instead
           echo "shoutrrr_body<<EOF" >> "$GITHUB_ENV"
           echo "$m_body" >> "$GITHUB_ENV"
           echo "EOF" >> "$GITHUB_ENV"
