--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -158,7 +158,7 @@ jobs:
             need_building=$([[ ${{needs.check-base-image.outputs.need-update}} == 'true' && $is_semver == 'true' ]] && echo 'true' || echo 'false')
           fi
 
-          m_title="Build: ${{github.event.repository}}@${tag}"
+          m_title="Build: ${{github.repository}}@${tag}"
           if [[${{github.event_name}} == 'schedule' && $is_semver == 'false']]; then
             m_title="${m_title} - WARNING!"
           fi
