--- a/.github/workflows/test-ref.yml
+++ b/.github/workflows/test-ref.yml
@@ -15,3 +15,5 @@ jobs:
           echo 'tag=${{github.ref_name}}' >> "$GITHUB_OUTPUT"
           is_semver=$([[ '${{github.ref_name}}' =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo 'true' || echo 'false')
           echo "is-semver=${is_semver}" >> "$GITHUB_OUTPUT"
+          printenv
+          echo $github
