--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -57,10 +57,11 @@ jobs:
         # no conditional handling needed because github.sha and github.ref
         # are required values in every action. I just needed to ignore them
         # if the event is not a push
+        shell: bash
         run: |
-          echo 'sha=${{github.sha}}' >> "$GITHUB_OUTPUT"
-          echo 'tag=${{github.ref_name}}' >> "$GITHUB_OUTPUT"
-          is_semver=$([[ '${{github.ref_name}}' =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo 'true' || echo 'false')
+          echo 'sha=${GITHUB_SHA}' >> "$GITHUB_OUTPUT"
+          echo 'tag=${GITHUB_REF_NAME}' >> "$GITHUB_OUTPUT"
+          is_semver=$([[ '${GITHUB_REF_NAME}' =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo 'true' || echo 'false')
           echo "is-semver=${is_semver}" >> "$GITHUB_OUTPUT"
 
   get-dispatch-params:
