--- a/.github/workflows/test-ref.yml
+++ b/.github/workflows/test-ref.yml
@@ -16,5 +16,5 @@ jobs:
           echo $'tag=${tag}' >> "$GITHUB_OUTPUT"
           is_semver=$([[ $'${tag}' =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo 'true' || echo 'false')
           echo "is-semver=${is_semver}" >> "$GITHUB_OUTPUT"
-          printenv
-          echo $github
+          echo ${tag}
+          echo ${is_semver}
