--- a/.github/workflows/test-ref.yml
+++ b/.github/workflows/test-ref.yml
@@ -12,9 +12,12 @@ jobs:
       - id: blah
         run: |
           echo 'sha=${{github.sha}}' >> "$GITHUB_OUTPUT"
+
+          # replace single quote with \'
           tag=${GITHUB_REF_NAME//\'/\\\'}
-          echo $'tag=${tag}' >> "$GITHUB_OUTPUT"
-          is_semver=$([[ $'${tag}' =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo 'true' || echo 'false')
+
+          echo 'tag=${tag}' >> "$GITHUB_OUTPUT"
+          is_semver=$([[ "${tag}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo 'true' || echo 'false')
           echo "is-semver=${is_semver}" >> "$GITHUB_OUTPUT"
           echo ${tag}
           echo ${is_semver}
