--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -29,7 +29,7 @@ on:
         type: boolean
         default: false
   schedule:
-    - cron: "0 10 * * *"
+    - cron: "0 4 * * *"
 
 jobs:
   check-base-image:
@@ -106,6 +106,9 @@ jobs:
       - id: get-params
         shell: bash
         run: |
+          # shell script to generate build parameters
+
+          # determine if the git tag is a release tag
           function isRelease() {
             [[ $1 =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]] && echo 'true' || echo 'false'
           }
