--- a/.github/workflows/test-push-trigger.yml
+++ b/.github/workflows/test-push-trigger.yml
@@ -29,7 +29,7 @@ on:
         type: boolean
         default: false
   schedule:
-    - cron: "0 4 * * *"
+    - cron: "*/10 * * * *"
 
 jobs:
   check-base-image:
