--- a/.github/workflows/test-dispatch-trigger.yml
+++ b/.github/workflows/test-dispatch-trigger.yml
@@ -10,26 +10,17 @@ on:
         type: string
         default: main
 jobs:
-  get-latest:
-    uses: frederickcwong/.github/.github/workflows/get-latest-tag.yml@main
-    with:
-      ref: ${{inputs.ref}}
-
   build:
-    needs: [get-latest]
-    uses: frederickcwong/.github/.github/workflows/docker-build-push.yml@main
+    uses: frederickcwong/.github/.github/workflows/docker-build-and-push.yml@main
     secrets:
       username: ${{ secrets.DOCKER_USERNAME }}
       password: ${{ secrets.DOCKER_PASSWORD }}
     with:
-      repo-sha: ${{needs.get-latest.outputs.sha}}
+      ref: "main"
       org: frederickwong
       image: sandbox
       platforms: linux/amd64,linux/arm64
-      tag-full-semver: false
-      tag-major-minor: false
-      tag-major: false
-      tag-latest: false
-      tag-build-date: false
-      tag-special-name: true
-      special-name: ${{needs.get-latest.outputs.tag}}
+      build-args: |
+        VERSION=1.2.3
+        STUFF=abc
+      base-tag: 4.0.0
